--- a/assets/css/_full-width-header.scss
+++ b/assets/css/_full-width-header.scss
@@ -30,7 +30,7 @@
         margin-bottom: 20px;
       }
       h2{
-        font-family: $knockout-bantam;
+        font-family: $knockout-feather;
         font-weight: initial;
         color: $oro_yellow;
         font-size: 50px;
