--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -90,10 +90,10 @@
       h5{
         color: $oro_yellow;
         text-transform: uppercase;
-        font-family: $knockout-bantam;
+        font-family: $knockout-feather;
         font-weight: initial;
         padding: 10px;
-        font-size: 45px;
+        font-size: 37px;
         line-height: 1.1em;
         position: absolute;
         left: 0;
