--- a/templates/gallery_page.html
+++ b/templates/gallery_page.html
@@ -1,14 +1,15 @@
 {% include "header.html" %}
 <article class='gallery-page'>
   <div class="content-margins">
+    <section class="gallery-header">
+      <h1 class="mobile-happenings-title">Gallery</h1>
 
-    <h1 class="mobile-happenings-title">Gallery</h1>
-
-    <div class="page-landing-header">
-      <img src="{{static('img/gallery-images/Left.png')}}" alt="">
-      <h1>Gallery</h1>
-      <img src="{{static('img/gallery-images/Right.png')}}" alt="">
-    </div>
+      <div class="page-landing-header">
+        <img src="{{static('img/gallery-images/Left.png')}}" alt="" class='header-icon-left'>
+        <h1>Gallery</h1>
+        <img src="{{static('img/gallery-images/Right.png')}}" alt="" class='header-icon-right'>
+      </div>
+    </section>
 
 
     <section class="gallery-images">
