--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -1,5 +1,10 @@
 .gallery-page{
   padding-top: 28px;
+  
+}
+
+.gallery-header{
+  margin-bottom: 30px;
 }
 
 .gallery-images{
@@ -35,29 +40,51 @@
   .gallery-image-holder:nth-child(4),.gallery-image-holder:nth-child(5), .gallery-image-holder:nth-child(6){
     width: 32%;
     padding-bottom: 20%;
+    height: 0;
   }
   .gallery-image-holder:nth-child(7){
-    width: 100%;
-    height: auto;
-  }
-
-  .gallery-image-holder:nth-child(1n+7), .gallery-image-holder:nth-child(2n+7){
-    width: 49%;
-    padding-bottom: 29%;
-  }
-  .gallery-image-holder:nth-child(3n+7){
     width: 100%;
     height: auto;
     img{
       position: relative;
     }
   }
-  .gallery-image-holder:nth-child(4n+7),.gallery-image-holder:nth-child(5n+7), .gallery-image-holder:nth-child(6n+7){
+
+  .gallery-image-holder:nth-child(7n+1), .gallery-image-holder:nth-child(7n + 2){
+    width: 49%;
+    padding-bottom: 29%;
+    height: 0;
+  }
+  .gallery-image-holder:nth-child(7n+3){
+    width: 100%;
+    height: auto;
+    padding-bottom: 0px;
+    img{
+      position: relative;
+    }
+  }
+  .gallery-image-holder:nth-child(7n + 4),.gallery-image-holder:nth-child(7n+ 5), .gallery-image-holder:nth-child(7n + 6){
     width: 32%;
     padding-bottom: 20%;
+    height: 0;
   }
   .gallery-image-holder:nth-child(7n){
     width: 100%;
     height: auto;
+    padding-bottom: 0px;
+    img{
+      position: relative;
+    }
+  }
+}
+
+@media (max-width: 767px){
+  .gallery-image-holder{
+    height: auto !important;
+    width: 100% !important;
+    padding-bottom: 0px !important;
+    img{
+      position: relative !important;
+    }
   }
 }
