--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -109,6 +109,8 @@ $desktop_mid : 900px;
           text-decoration: none;
           padding: 12px 16px;
           display: block;
+          font-family: $knockout-feather;
+          letter-spacing: 0.016em;
         } &.has-children {
           position: relative;
           z-index: 1;
