--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -70,9 +70,10 @@
     @media (max-width: 767px){
       padding: 20px 40px;
     }
-    h1{
+    h2{
       font-family: $knockout-bantam;
       margin-bottom: 20px;
+      color: white;
     }
     p{
       margin-bottom: 20px;
