--- a/assets/css/_restaurant-single.scss
+++ b/assets/css/_restaurant-single.scss
@@ -1,10 +1,29 @@
 .restaurant-single{
   padding-top: 30px;
+  width:100%;
+  @media (max-width: 767px){
+    padding-top: 0px;
+
+  }
 }
 
-
+.restaurant-header-mobile{
+  display: none;
+  @media (max-width: 767px){
+    width: 100%;
+    display: block;
+    margin-bottom:30px;
+    img{
+      width:100%;
+      height:auto;
+    }
+  }
+}
 .restaurant-header{
   margin-bottom: 30px;
+  @media (max-width: 767px){
+    display: none;
+  }
   img{
     width: 100%;
     height: 100%;
@@ -30,7 +49,7 @@
       border-right: 0px;
     }
     .restaurant-single-content{
-      padding: 10px 20px;
+      padding: 30px 35px;
       border-bottom-width: 2px;
       border-bottom-style: solid;
       // flex-grow: 1;
@@ -120,6 +139,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+
     h2{
       text-transform: uppercase;
       color: white;
@@ -132,6 +152,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    @media(max-width: 767px){
+width:100%;
+flex-direction: column;
+.menu-button{margin:7px 0px;}
+
+    }
     .rest-single-menu-title{
       display: flex;
       justify-content: center;
@@ -151,7 +177,10 @@
         text-transform: uppercase;
       }
       &.active{
-        color: white;
+        color: white !important;
+        h3{
+          color:white;
+        }
       }
       &:last-child{
         margin-right: 0px;
@@ -162,7 +191,6 @@
     border-style: solid;
     border-width: 2px;
     border-top:none;
-    border-bottom:none;
     display: none;
 
     &.active{
@@ -184,6 +212,9 @@ border-right:none;
       padding:40px 110px;
       display: flex;
       flex-wrap: wrap;
+      @media (max-width: 767px){
+        padding:20px 10px;
+      }
     }
     .item{
       width:50%;
@@ -191,8 +222,12 @@ border-right:none;
       padding:10px;
       display: flex;
       flex-direction: row;
+      @media (max-width: 767px){
+        width:100%;
+      }
+
       .itemdesc{
-        width:80%;
+        width:85%;
       .itemName{
         text-transform: uppercase;
       }
@@ -202,6 +237,7 @@ border-right:none;
   }
   }
 }
+
 
 
 .rest-single-join-us{
