--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -40,6 +40,11 @@
 </style>
 
 <article class="restaurant-single rest-{{current.slug}}">
+  <section class="restaurant-header-mobile">
+    <h1>
+      <img src="{{current.fields.banner_image.url}}" alt="{{current.name}}">
+    </h1>
+  </section>
   <div class="content-margins">
 
     <section class="restaurant-header">
@@ -101,11 +106,11 @@
       </div>
       <div class="rest-single-menu-select" >
       {% for individualmenu in current.fields.menus %}
-        <div class="{% if loop.index == 1%}active{% endif %} rest-single-menu-title  menu-button" menu_attr='{{individualmenu.menu.name}}' style='border-color: {{current.fields.primary_color}}'><h3>{{individualmenu.menu.name}}</h3></div>
+        <div class="{% if loop.index == 1%}active{% endif %} rest-single-menu-title  menu-button" menu_attr='{{individualmenu.menu.slug}}' style='border-color: {{current.fields.primary_color}}'><h3 class='ccolor'>{{individualmenu.menu.name}}</h3></div>
         {% endfor %}
       </div>
       {% for individualmenu in current.fields.menus %}
-      <section class="rest-single-menu-cont full-menu {% if loop.index == 1%}active{% endif %} menu-{{individualmenu.menu.name}}" style='border-color: {{current.fields.primary_color}}'>
+      <section class="rest-single-menu-cont full-menu {% if loop.index == 1%}active{% endif %} menu-{{individualmenu.menu.slug}}" style='border-color: {{current.fields.primary_color}}'>
       {% for section in individualmenu.menu.sections %}
       <section class='menu-section'>
       <h4 class="bcolor">{{section.name}}</h4>
@@ -120,8 +125,8 @@
       </div>
       {% for price in item.prices %}
 
-      <div class='itemprice ccolor'>
-        <p>${{price.price}}</p>
+      <div class='itemprice'>
+        <p class='ccolor'>${{price.price}} {% if price.unit != None %}{{price.unit}}{% endif %}</p>
       </div>
       {% endfor %}
       </div>
