--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -31,11 +31,18 @@
       <div class="info">
 
           <p class="blog-post__tag">{{ post.categories[0].name }}</p>
-          <h1 class="blog-post__title">{{ post.title }}</h1>
+          <h2 class="blog-post__title">{{ post.title }}</h2>
           <p class="blog-post__desc">{{ post.fields.dek }}</p>
 
       </div>
       <a href='{{post.url}}'></a>
+      <div class="single-blog-arrow">
+        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 0 31.5 31.5" style="enable-background:new 0 0 31.5 31.5;" xml:space="preserve">
+        <path class="blog-arrow" d="M18.7,5c-0.4-0.4-1.1-0.4-1.6,0c-0.4,0.4-0.4,1.1,0,1.6l8,8H3.6c-0.6,0-1.1,0.5-1.1,1.1s0.5,1.1,1.1,1.1h21.5
+          l-8,8c-0.4,0.4-0.4,1.2,0,1.6c0.4,0.4,1.2,0.4,1.6,0l10-10c0.4-0.4,0.4-1.1,0-1.6L18.7,5z"/>
+        </svg>
+      </div>
     </article>
 
 
