--- a/assets/css/_happenings.scss
+++ b/assets/css/_happenings.scss
@@ -1,6 +1,14 @@
 .events-landing{
 margin:23px 0px 20px 0px;
-
+padding-top:30px;
+.page-landing-header{
+  img:nth-child(1){
+    border-right:2px solid $toro-red;
+  }
+  img:nth-child(3){
+    border-left:2px solid $toro-red;
+  }
+}
 }
 .events-description{
   margin:10px 0px 40px 0px;
@@ -19,21 +27,20 @@ margin:23px 0px 20px 0px;
 .filter{
   display: flex;
   margin:20px 0px;
-  justify-content:flex-start;
+  justify-content:space-between;
   flex-wrap: wrap;
   align-items: flex-start;
 button{
-  width:125px;
+  width:14%;
   height:65px;
   color:$toro-red;
   text-transform: uppercase;
   border:2px solid $toro-red;
   background-color:white;
-  font-family: $knockout-bantam;
-  font-size:2.5rem;
+  font-family: $knockout-lite;
+  font-size:2rem;
   line-height: 1rem;
 cursor: pointer;
-  margin:0px 15px;
 
 }
 button.active{
@@ -84,7 +91,7 @@ min-height:535px;
       h3{
         text-transform: uppercase;
         color: $toro_red;
-        font-family: $knockout-lite;
+        font-family: $knockout-feather;
         font-size: 40px;
         line-height: 1em;
         margin-bottom: 7px;
