--- a/assets/css/_happenings.scss
+++ b/assets/css/_happenings.scss
@@ -21,35 +21,35 @@ margin:23px 0px 20px 0px;
   margin:20px 0px;
   justify-content:flex-start;
   flex-wrap: wrap;
-  align-items: flex-start;
-button{
-  width:125px;
-  height:65px;
-  color:$toro-red;
-  text-transform: uppercase;
-  border:2px solid $toro-red;
-  background-color:white;
-  font-family: $knockout-bantam;
-  font-size:2.5rem;
-  line-height: 1rem;
-cursor: pointer;
-  margin:0px 15px;
-
-}
-button.active{
-  background-color:$toro-red;
-  color:white;
-}
-h1{
-}
-h2{
-  font-family:$knockout-feather;
-  text-transform: uppercase;
-  color:$toro-red;
-  font-size:6rem;
-  line-height: .6em;
-  margin-right:10px;
-}
+  align-items: center;
+  button{
+    width:125px;
+    height:65px;
+    color:$toro-red;
+    text-transform: uppercase;
+    border:2px solid $toro-red;
+    background-color:white;
+    font-family: $knockout-bantam;
+    font-size:2.5rem;
+    line-height: 1rem;
+    cursor: pointer;
+    margin:0px 15px;
+    transition: ease 250ms all;
+  }
+  button.active, button:hover{
+    background-color:$toro-red;
+    color:white;
+  }
+  h1{
+  }
+  h2{
+    font-family:$knockout-feather;
+    text-transform: uppercase;
+    color:$toro-red;
+    font-size:6rem;
+    line-height: .6em;
+    margin-right:10px;
+  }
 
 }
 
@@ -62,7 +62,7 @@ h2{
     margin-bottom: 30px;
     transition: 2s height ;
     transition-timing-function: cubic-bezier(0.25, 0.1, 0.09, 0.99);
-min-height:535px;
+      min-height:535px;
     .home-happenings-event{
       width: 24%;
       padding: 10px;
@@ -72,7 +72,9 @@ min-height:535px;
       flex-direction: column;
       justify-content: space-between;
       text-decoration: none;
-      color: black;
+      transition: ease 250ms all;
+
+
       .home-happenings-upper{
         margin-bottom: 20px;
       }
@@ -104,6 +106,18 @@ min-height:535px;
         width: 100%;
         height: 100%;
       }
+
+      h3, h6, p{
+        transition: ease 250ms all;
+      }
+
+      &:hover{
+        background-color: $toro_red;
+        h3, h6, p{
+          color: white;
+        }
+      }
+
     }
   }
 
