--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -96,7 +96,7 @@ $desktop_mid : 900px;
 #site-navigation {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  // justify-content: flex-end;
 
   > ul {
     @media screen and (min-width: $desktop_min) {
@@ -113,10 +113,28 @@ $desktop_mid : 900px;
           @include nav-font-style;
           color: inherit;
           text-decoration: none;
-          padding: 12px 16px;
+          margin: 12px 16px;
           display: block;
           font-family: $knockout-feather;
           letter-spacing: 0.016em;
+          position: relative;
+          &:before{
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 100%;
+            margin: auto;
+            width: 00;
+            height: 2px;
+            background-color: $toro_red;
+            transition: ease 300ms all;
+          }
+          &:hover{
+            &:before{
+              width: 100%;
+            }
+          }
         } &.has-children {
           position: relative;
           z-index: 1;
@@ -376,9 +394,24 @@ $desktop_mid : 900px;
 
 .nav-item{
   transition: ease 250ms all;
+  &.current_page{
+    a{
+      &:before{
+        width: 100% !important;
+      }
+    }
+  }
+}
 
-  &:hover, &.current_page{
-    background-color: $toro_red;
-    color: white;
+
+.nav-children{
+  .nav-item{
+    a{
+      margin: 0px !important;
+      padding: 12px 16px;
+      &:before{
+        display: none;
+      }
+    }
   }
 }
