--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -11,6 +11,13 @@
 
 @font-face {
   font-family: 'Domaine';
+  src: url("../fonts/Domaine/DomaineDisp-Semibold.otf");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Domaine';
   src: url("../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot");
   src: url("../fonts/Domaine/DomaineDisplayWeb-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff2") format("woff2"), url("../fonts/Domaine/DomaineDisplayWeb-BoldItalic.woff") format("woff");
   font-weight: 400;
