--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -8,6 +8,12 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Domaine';
+  src: url("../fonts/Domaine/DomaineDisp-Semibold.otf");
+  font-weight: 100;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Domaine';
