--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -99,7 +99,7 @@ $desktop_mid : 900px;
   // justify-content: flex-end;
 
   > ul {
-    @media screen and (min-width: $desktop_min) {
+    @media screen and (min-width: 1030px) {
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -118,7 +118,7 @@ $desktop_mid : 900px;
           font-family: $knockout-feather;
           letter-spacing: 0.016em;
           position: relative;
-          &:before{
+          &:after{
             content: '';
             position: absolute;
             left: 0;
@@ -131,7 +131,7 @@ $desktop_mid : 900px;
             transition: ease 300ms all;
           }
           &:hover{
-            &:before{
+            &:after{
               width: 100%;
             }
           }
@@ -396,7 +396,10 @@ $desktop_mid : 900px;
   transition: ease 250ms all;
   &.current_page{
     a{
-      &:before{
+      @media (max-width: 1030px){
+        // color: $oro_yellow !important;
+      }
+      &:after{
         width: 100% !important;
       }
     }
@@ -409,9 +412,25 @@ $desktop_mid : 900px;
     a{
       margin: 0px !important;
       padding: 12px 16px;
-      &:before{
+      &:after{
         display: none;
       }
     }
+  }
+}
+
+.mobile-social-menu{
+  display: none;
+  border: 0px !important;
+  margin-top: 20px;
+  a{
+    margin: 0 10px;
+  }
+  img{
+    height: 20px;
+    width: auto;
+  }
+  @media (max-width: 1030px){
+    display: block;
   }
 }
