--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -1,6 +1,6 @@
 body, html {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   padding: 0;
   margin: 0;
   font-size: 62.5%;
