--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -44,6 +44,9 @@ h6 {
 
 p {
   @include p-style;
+  a{
+    text-decoration: underline;
+  }
 }
 
 ul, ol {
@@ -158,4 +161,8 @@ a{
 }
 .header-icon-left{
   border-right: 2px solid $toro_red;
+}
+
+.hide-overflow{
+  overflow: hidden;
 }
