--- a/assets/css/_newsletter-popup.scss
+++ b/assets/css/_newsletter-popup.scss
@@ -40,7 +40,7 @@
   text-transform: uppercase;
   color: $oro_yellow;
   margin: 0;
-  font-family: $knockout-feather;
+  font-family: $knockout-bantam;
   @media screen and (max-width: $mobile_max) {
     text-transform: uppercase;
     max-width: 240px; font-size:6rem;
