--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -103,7 +103,7 @@ a{
   font-size: 20px;
   color: white;
   display: inline-block;
-  font-family: $knockout-feather !important;
+  font-family: $knockout-lite !important;
 }
 
 
