--- a/assets/css/_restaurant-single.scss
+++ b/assets/css/_restaurant-single.scss
@@ -11,11 +11,19 @@
   display: none;
   @media (max-width: 767px){
     width: 100%;
-    display: block;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
     margin-bottom:30px;
+    h1{
+      line-height: 0em;
+    }
     img{
       width:100%;
-      height:auto;
+      object-fit: cover;
+margin:0px;
+
     }
   }
 }
@@ -64,7 +72,7 @@
           text-transform: uppercase;
           font-family: $knockout-bantam;
           display: block;
-          padding: 20px 0 10px 0;
+          padding: 20px 0 15px 0;
         }
       }
       @media (max-width: 1024px){
@@ -175,9 +183,10 @@ flex-direction: column;
       background-color: transparent;
       h3{
         text-transform: uppercase;
+        color:black;
       }
       &.active{
-        color: white !important;
+        color: white;
         h3{
           color:white;
         }
@@ -314,7 +323,12 @@ border-right:none;
     &.active{
       color: black;
     }
+
   }
+  .active h3, .rest-single-menus .rest-single-menu-select .rest-single-menu-title h3{
+    color:black !important;
+  }
+
   .rest-single-menu-header{
     h2{
       color: black;
