--- a/templates/boxes/restaurant.html
+++ b/templates/boxes/restaurant.html
@@ -41,7 +41,7 @@
 
 <article class="restaurant-single rest-{{current.slug}}">
   <section class="restaurant-header-mobile">
-    <h1>
+    <h1 aria-label="Restaurant Name Image">
       <img src="{{current.fields.banner_image.url}}" alt="{{current.name}}">
     </h1>
   </section>
@@ -106,7 +106,7 @@
       </div>
       <div class="rest-single-menu-select" >
       {% for individualmenu in current.fields.menus %}
-        <div class="{% if loop.index == 1%}active{% endif %} rest-single-menu-title  menu-button" menu_attr='{{individualmenu.menu.slug}}' style='border-color: {{current.fields.primary_color}}'><h3 class='ccolor'>{{individualmenu.menu.name}}</h3></div>
+        <div class="{% if loop.index == 1%}active{% endif %} rest-single-menu-title  menu-button" menu_attr='{{individualmenu.menu.slug}}' style='border-color: {{current.fields.primary_color}}'><h3 class=''>{{individualmenu.menu.name}}</h3></div>
         {% endfor %}
       </div>
       {% for individualmenu in current.fields.menus %}
