--- a/templates/newsletter_popup.html
+++ b/templates/newsletter_popup.html
@@ -8,7 +8,7 @@
       Can we get an hola
     </h2>
     <p id="newsletter-popup-blurb">
-      Subscribe and be the first to hear about everything Little Spain
+      Subscribe and be the first to hear about everything Little Spain.
     </p>
 
 
