--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -185,7 +185,7 @@ $desktop_mid : 900px;
     flex: 0 0 0;
     position: fixed;
     z-index: 10;
-    top: 100%;
+    top: 100vh;
     left: 0;
     display: flex;
     flex-direction: column;
