--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -176,147 +176,13 @@ $desktop_mid : 900px;
       }
     }
     @media screen and (max-width: 1030px) {
-      // display: none ;
+
     }
   } > .mobile-nav-header {
     display: none;
   }
   @media screen and (max-width: 1030px) {
-    flex: 0 0 0;
-    position: fixed;
-    z-index: 10;
-    top: 100vh;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    // opacity: 0;
-    transform: translateY(0);
-    transition: ease 500ms all;
-    width: 100vw;
-    height: 100vh;
-    .nav-menu{
-      li.nav-item{
-        opacity: 0;
-      }
-    }
-    > ul {
-      display: block;
-      width: 100%;
-      max-width: 224px;
-      > li {
-        color: $white;
-        text-align: center;
-        @include nav-font-style;
-        padding: 16px 0;
-        border-bottom: 3px solid $oro_yellow;
-        a {
-          color: $white;
-          text-decoration: none;
-          transition: ease 250ms all;
-          &:hover {
-            color: $oro_yellow;
-          }
-        } &.has-children {
-          > a {
-            position: relative;
-            &::before {
-              @include psuedo;
-              right: -24px;
-              top: calc(50% - 8px);
-              width: 8px;
-              height: 8px;
-              border-bottom: 2px solid white;
-              border-right: 2px solid white;
-
-              // background: url('../img/carousel-arrow-white.svg');
-              // background-size: contain;
-              // background-repeat: no-repeat;
-              // background-position: center center;
-              @include transform(rotate(45deg));
-              transition: ease 300ms all;
-            } &.expanded {
-              &::before {
-                @include transform(rotate(-135deg) translateY(-0.15em) translateX(-0.15em));
-              }
-            }
-          } ul {
-            display: none;
-          } &.expanded {
-            > a {
-              color: $oro_yellow;
-            } ul {
-              margin-top: 2px;
-            }
-          }
-        }
-      }
-    }
-    > .mobile-nav-header {
-           display: flex;
-           flex-direction: row;
-           align-items: center;
-           justify-content: space-between;
-           width: 100%;
-           padding: 0 $gutter_width_mobile;
-           margin-top: 24px;
-           a {
-             display: block;
-             color: $white;
-             text-decoration: none;
-
-             &:hover {
-               color: $oro_yellow;
-             }
-           } .mobile-nav-header-logo {
-             svg {
-               height: 40px;
-               width: 40px;
-             }
-           } .mobile-nav-header-close {
-             font-size: 4rem;
-             width: 22px;
-             height: 40px;
-             margin-right: 12px;
-           }
-         }
-     &.opened {
-       transform: translateY(-100%);
-       // opacity: 1;
-      background: $toro_red;
-      .nav-menu{
-        li.nav-item{
-          opacity: 1;
-          transition: ease 700ms all;
-          &:nth-child(1){
-            transition-delay: 100ms;
-          }
-          &:nth-child(2){
-            transition-delay: 200ms;
-          }
-          &:nth-child(3){
-            transition-delay: 300ms;
-          }
-          &:nth-child(4){
-            transition-delay: 400ms;
-          }
-          &:nth-child(5){
-            transition-delay: 500ms;
-          }
-          &:nth-child(6){
-            transition-delay: 600ms;
-          }
-          &:nth-child(7){
-            transition-delay: 700ms;
-          }
-          &:nth-child(8){
-            transition-delay: 800ms;
-          }
-        }
-      }
-
-    }
+    display: none ;
   }
 }
 
@@ -433,4 +299,148 @@ $desktop_mid : 900px;
   @media (max-width: 1030px){
     display: block;
   }
+}
+
+#mobile-site-nav{
+  display: none;
+  @media (max-width: 1030px){
+    display: flex;
+  }
+
+
+    flex: 0 0 0;
+    position: fixed;
+    z-index: 10;
+    top: 100vh;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    // opacity: 0;
+    transform: translateY(0);
+    transition: ease 500ms all;
+    width: 100vw;
+    height: 100vh;
+    .nav-menu{
+      li.nav-item{
+        opacity: 0;
+      }
+    }
+    > ul {
+      display: block;
+      width: 100%;
+      max-width: 224px;
+      > li {
+        color: $white;
+        text-align: center;
+        @include nav-font-style;
+        padding: 16px 0;
+        border-bottom: 3px solid $oro_yellow;
+        a {
+          color: $white;
+          text-decoration: none;
+          transition: ease 250ms all;
+          &:hover {
+            color: $oro_yellow;
+          }
+        } &.has-children {
+          > a {
+            position: relative;
+            &::before {
+              @include psuedo;
+              right: -24px;
+              top: calc(50% - 8px);
+              width: 8px;
+              height: 8px;
+              border-bottom: 2px solid white;
+              border-right: 2px solid white;
+
+              // background: url('../img/carousel-arrow-white.svg');
+              // background-size: contain;
+              // background-repeat: no-repeat;
+              // background-position: center center;
+              @include transform(rotate(45deg));
+              transition: ease 300ms all;
+            } &.expanded {
+              &::before {
+                @include transform(rotate(-135deg) translateY(-0.15em) translateX(-0.15em));
+              }
+            }
+          } ul {
+            display: none;
+          } &.expanded {
+            > a {
+              color: $oro_yellow;
+            } ul {
+              margin-top: 2px;
+            }
+          }
+        }
+      }
+    }
+    > .mobile-nav-header {
+           display: flex;
+           flex-direction: row;
+           align-items: center;
+           justify-content: space-between;
+           width: 100%;
+           padding: 0 $gutter_width_mobile;
+           margin-top: 24px;
+           a {
+             display: block;
+             color: $white;
+             text-decoration: none;
+
+             &:hover {
+               color: $oro_yellow;
+             }
+           } .mobile-nav-header-logo {
+             svg {
+               height: 40px;
+               width: 40px;
+             }
+           } .mobile-nav-header-close {
+             font-size: 4rem;
+             width: 22px;
+             height: 40px;
+             margin-right: 12px;
+           }
+         }
+     &.opened {
+       transform: translateY(-100%);
+       // opacity: 1;
+      background: $toro_red;
+      pointer-events: auto;
+      .nav-menu{
+        li.nav-item{
+          opacity: 1;
+          transition: ease 700ms all;
+          &:nth-child(1){
+            transition-delay: 100ms;
+          }
+          &:nth-child(2){
+            transition-delay: 200ms;
+          }
+          &:nth-child(3){
+            transition-delay: 300ms;
+          }
+          &:nth-child(4){
+            transition-delay: 400ms;
+          }
+          &:nth-child(5){
+            transition-delay: 500ms;
+          }
+          &:nth-child(6){
+            transition-delay: 600ms;
+          }
+          &:nth-child(7){
+            transition-delay: 700ms;
+          }
+          &:nth-child(8){
+            transition-delay: 800ms;
+          }
+        }
+      }
+
+    }
 }
