--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -2,8 +2,10 @@
  * Colors
  ***************************/
   /* Brand colors */
-    $toro_red : #EA0029;
-    $oro_yellow : #FFF065;
+    // $toro_red : #EA0029;
+    $toro_red : #e4002b;
+    // $oro_yellow : #FFF065;
+    $oro_yellow : #fff166;
   /* Grayscale */
     $white : #FFFFFF;
     $mid_grey : #474746;
