--- a/assets/css/_blog-single.scss
+++ b/assets/css/_blog-single.scss
@@ -192,6 +192,10 @@
           height: 100%;
           object-fit: cover;
           border: 2px solid $toro_red;
+          position: absolute;
+          left: 0;
+          top: 0;
+          
         }
 
 
