--- a/assets/css/_newsletter-popup.scss
+++ b/assets/css/_newsletter-popup.scss
@@ -72,8 +72,7 @@
     color: $white;
     &:hover {
       color: $toro_red;
-    } &:active {
-      background: $oro_yellow;
+      background-color: white;
     }
   }
 }
