--- a/templates/boxes/kiosks.html
+++ b/templates/boxes/kiosks.html
@@ -104,7 +104,7 @@
 
       <div class="hay-mas-link">
         <a href="{{boxes.blog.all[0].url}}">
-          <h6>Mercado Magazine</h6>
+          <h6>El Blog</h6>
           <div class="hay-mas-link-icon with-padding">
             <img src="{{boxes.blog.all[0].image.url}}" alt="{{boxes.blog.all[0].image.alt_text}}">
             <span></span>
