--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" href="{{ account.site.favicon }}">
+  <link rel="icon" href="{{ static('img/contact-landing/starburst_icon.png') }}">
 
 
 
@@ -64,7 +64,7 @@
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <ul class="nav-menu">
         {% for item in navs.main %}
-          {% if item.slug == 'restaurant' %}
+          {% if item.slug == 'restaurants' %}
             <li class="nav-item has-children {% if item.slug == current.box_type %}current_page{% endif %}">
               <a href="{{ item.url }}" aria-controls="{{ item.slug }}-dropdown" aria-expanded="false" data-url="{{ item.url }}" onClick="restClick(event)" class='toggle-restaurants'>
                 {{ item.name }}
