--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -414,6 +414,7 @@
             font-size: 55px;
             height: 100%;
             width: 100%;
+            letter-spacing: 0.04em;
             @media (max-width: 920px) and (min-width: 768px){
               font-size: 35px;
             }
