--- a/assets/css/_shop.scss
+++ b/assets/css/_shop.scss
@@ -56,6 +56,7 @@
         font-family: $knockout-bantam;
         max-width: 200px;
         margin: auto;
+        letter-spacing: 0.04em;
         @media (max-width: 1200px){
           font-size: 80px;
         }
