--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,9 @@
               </div>
               <h3>{{slide.blog.blog_box.name}}</h3>
               <div class="home-slide-desc"><p>{{slide.blog.blog_box.fields.dek}}</p></div>
+              <div class="home-slide-buttons">
+                <a href="{{slide.blog.blog_box.url}}">Read More</a>
+              </div>
             </div>
           </div>
         </div>
