--- a/templates/newsletter_popup.html
+++ b/templates/newsletter_popup.html
@@ -4,30 +4,35 @@
     × <span class="screen-reader-text">Close Menu</span>
   </a>
   <div class="content-margins">
-    <h2 id="newsletter-popup-title">
-      Can we get an hola
-    </h2>
-    <p id="newsletter-popup-blurb">
-      Subscribe and be the first to hear about everything Little Spain.
-    </p>
+    <div class="newsletter-sign-up-form">
+      <h2 id="newsletter-popup-title">
+        Can we get an hola
+      </h2>
+      <p id="newsletter-popup-blurb">
+        Subscribe and be the first to hear about everything Little Spain.
+      </p>
 
 
-    <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
-      <input id="id_prev_member_email" name="prev_member_email" type="hidden">
-      <input id="id_source" name="source" type="hidden">
-      <input name="prev_member_email" type="hidden" value="">
-      <div class="form-fields__fields-wrapper">
-       <div class="field">
-        <div class="field-html ">
-         <input  id="id_email" type="email" class="red-input inverted" placeholder="¡Your Email!" name="email">
+      <form action="https://app.e2ma.net/app2/audience/signup/1873742/1887124/?r=signup" id="signup" method="post" name="signup" class="newsletter-capture-form">
+        <input id="id_prev_member_email" name="prev_member_email" type="hidden">
+        <input id="id_source" name="source" type="hidden">
+        <input name="prev_member_email" type="hidden" value="">
+        <div class="form-fields__fields-wrapper">
+         <div class="field">
+          <div class="field-html ">
+           <input  id="id_email" type="email" class="red-input inverted" placeholder="¡Your Email!" name="email">
+          </div>
+         </div>
         </div>
-       </div>
-      </div>
 
-      <div class="form-button">
-       <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button inverted'>
-      </div>
-     </form>
+        <div class="form-button">
+         <input id="form-submit-input" name="Submit" type="submit" value="Submit" class='outline-button inverted'>
+        </div>
+       </form>
+    </div>
+    <div class="newsletter-success-msg">
+      <h3>Thanks for signing up!</h3>
+    </div>
   </div>
 </aside>
 <!-- END newsletter_popup.html -->
