--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -489,12 +489,12 @@
 }
 .home-slide{
   width: 100%;
-  height: 40vw !important;
+  height: 50vw !important;
   position: relative;
   @media (max-width: 920px){
     height: 60vw !important;
   }
-  @media (max-width: 620px){
+  @media (max-width: 767px){
     height: auto !important;
     display: flex !important;
     flex-direction: column;
@@ -505,11 +505,14 @@
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 100%;
     .content-margins{
       position: relative;
+      height: 100%;
     }
-    @media (max-width: 620px){
+    @media (max-width: 767px){
       position: relative;
+      height: auto;
       .content-margins{
         width: 100%;
         margin: 0px;
@@ -524,7 +527,7 @@
     width: 100%;
     z-index: -1;
 
-  @media (max-width: 620px){
+  @media (max-width: 767px){
     position: relative;
     height: 90vw;
     width: 100%;
@@ -542,13 +545,33 @@
     background-color: white;
     position: absolute;
     left: 0;
-    bottom: 50px;
-    width: 300px;
-    @media (max-width: 620px){
+    top: 60%;
+    width: 400px;
+    @media (max-width: 767px){
       position: relative;
       width: 100%;
       bottom: 0px;
+      top: auto;
     }
+    @media (max-width: 920px){
+      top: 50%;
+    }
+    @media (min-width: 921px){
+      top: 23vw;
+    }
+
+    @media (min-width: 1000px){
+      top: 25vw;
+    }
+
+    @media (min-width: 1200px){
+      top: 30vw;
+    }
+
+    @media (min-width: 1600px){
+      top: 35vw;
+    }
+
     h3{
       border-bottom: 2px solid $toro_red;
       background-color: $oro_yellow;
