--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -293,3 +293,15 @@ address.site-info {
     }
   }
 }
+
+.footer-social-menu{
+  margin-top: 10px;
+  a{
+        margin-right: 20px;
+  }
+  img{
+    height: 20px;
+    width: auto;
+
+  }
+}
