--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -105,7 +105,7 @@
   </div>
   <div class='press_features'>
     {% for press in boxes.press.all %}
-    <a href='' target="_blank">
+    <a href='{{press.external_url}}' target="_blank">
 
       <div class='individual_press'>
 
