--- a/templates/shop.html
+++ b/templates/shop.html
@@ -39,7 +39,7 @@
 </section>
 
 
-<section class="shop-little-spain-online" id="shop-online">
+<!-- <section class="shop-little-spain-online" id="shop-online">
   <div class="content-margins">
     <div class="section-title-container">
       <img src="{{ static('img/yellow_triangle.png')}}" alt="">
@@ -64,7 +64,7 @@
 
     </div>
   </div>
-</section>
+</section> -->
 
 
 <section class="shop-little-gift-cards" id="gift-cards">
