--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -237,14 +237,14 @@
     }
     a{
       text-decoration: none;
-      &:hover h6{
+      &:hover .kiosk-bar-hover-img{
         opacity: 1;
       }
     }
     .home-mercado-kiosk-img{
       margin-bottom: 15px;
       position: relative;
-      h6{
+      .kiosk-bar-hover-img{
         position: absolute;
         left: 0;
         top: 0;
@@ -253,8 +253,6 @@
         align-items: center;
         height: 100%;
         width: 100%;
-        background-color: rgba(255, 240, 101, 0.9);
-        color: $toro_red;
         font-family: $domaine;
         font-size: 25px;
         text-align: center;
@@ -263,6 +261,32 @@
         padding: 10px;
         opacity: 0;
         transition: 300ms ease all;
+        .img-fade{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+          background-color: rgba(0,0,0,0.3);
+        }
+        img{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border: 0px;
+          z-index: 0;
+        }
+      }
+
+      h6{
+        color: $oro_yellow;
+        position: relative;
+        z-index: 2;
+        font-size: 20px;
       }
     }
     img{
