--- a/assets/css/_the_mercado.scss
+++ b/assets/css/_the_mercado.scss
@@ -28,29 +28,56 @@
       }
     }
     .kiosk-box-img{
+      margin-bottom: 15px;
       position: relative;
-
-      h4{
+      .kiosk-bar-hover-img{
         position: absolute;
         left: 0;
         top: 0;
-        height: 100%;
-        width: 100%;
-        background-color: rgba(255,240,101,0.9);
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 20px;
+        height: 100%;
+        width: 100%;
         font-family: $domaine;
+        font-size: 25px;
         text-align: center;
-        font-size: 38px;
-        @media (max-width: 767px){
-          font-size: 20px;
-        }
-        color: $toro_red;
+        line-height: 1.2em;
+        font-weight: 900;
+        padding: 10px;
         opacity: 0;
-        transition: ease 300ms all;
+        transition: 300ms ease all;
+        .img-fade{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          z-index: 1;
+          background-color: rgba(0,0,0,0.3);
+        }
+        h4{
+          position: relative;
+          z-index: 2;
+          color: $oro_yellow;
+        }
+        img{
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border: 0px;
+          z-index: 0;
+        }
+      }
 
+      h6{
+        color: $oro_yellow;
+        position: relative;
+        z-index: 2;
+        font-size: 20px;
       }
     }
     img{
@@ -58,7 +85,7 @@
       height: auto;
       border: 2px solid $toro_red;
     }
-    &:hover h4{
+    &:hover .kiosk-bar-hover-img{
       opacity: 1;
     }
   }
