--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" href="{{ static('img/contact-landing/starburst_icon.png') }}">
+  <link rel="icon" href="{{ static('img/icon.png') }}">
 
 
 
