--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,11 @@
           <a href="{{kiosk.url}}">
             <div class="home-mercado-kiosk-img">
               <img src="{{kiosk.fields.thumbnail_left.url}}" alt="{{kiosk.fields.thumbnail_left.alt_text}}">
-              <h6>{{kiosk.fields.hover_text}}</h6>
+              <div class="kiosk-bar-hover-img">
+                <img src="{{kiosk.fields.gallery[0].image_url}}" alt="">
+                <div class="img-fade"></div>
+                <h6>{{kiosk.fields.hover_text}}</h6>
+              </div>
             </div>
             <h5>{{kiosk.name}}</h5>
           </a>
