--- a/templates/shop.html
+++ b/templates/shop.html
@@ -24,7 +24,7 @@
 
 {% for shop in current.fields['shop-products'].products %}
       <article class="kiosk-box">
-          <a href="">
+          <a href="" target="_blank">
             <div class="kiosk-box-img">
               <img src="{{shop.image.url}}" alt="{{shop.image.alt_text}}">
               <h4>{{shop.hover_text}}</h4>
